# Scrimmage

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  TODO.txt  build-clean.sh  bulid.sh
apps/: CMakeLists.txt  main.cpp
apps/scrimmage-client/: CMakeLists.txt  main.cpp
apps/scrimmage-server/: CMakeLists.txt  main.cpp
build-debug/: compile_commands.json
build-debug/apps/scrimmage-client/: scrimmage-client
build-debug/apps/scrimmage-server/: scrimmage-server
engine/: .gitignore
engine/libs/concurrency/: PinnedThread.h  RR_cpu_pause.h
engine/libs/matching-engine/: CommonStructs.h  MatchingEngineApi.h  OdrerBookEntry.h  OrderBook.h  OrderBookEntry.h  OrderMap.h  OrderPool.h  PriceLevel.h  RR_cpu_pause.h  RR_execution_report.h  RR_ilnk3_messages.h  RR_messages.h  RR_order_book_entry.h  RR_order_index.h  RR_order_pool.h  RR_price_book_level.h  RR_spsc_ring_buffer_consumer.h  R_ExchangeClient.h  R_MessageStructs.h
libs/common/: CMakeLists.txt  CpuPause.h
libs/common/SpScRingBuffer/: SpScRingBuffer.h  SpScRingBufferConsumer.h
libs/concurrency/: CMakeLists.txt  CpuPause.h  PinnedThread.h
libs/market-data/: CMakeLists.txt  MarketDataPipeline.h  OrderBookFeed.h  SyntheticDataInjector.h
libs/match/: Architecture.md  CMakeLists.txt  Constants.h  ExecutionReport.h  MatchResult.h  MatchingEngine.h  MatchingEngineConfig.h  MatchingEngineConstants.h  MatchingEnginePartition.h  Order.h  OrderBook.h  OrderBookEntry.h  OrderMap.h  OrderPool.h  PriceLevels.h
libs/math-lib/: CMakeLists.txt
libs/math-lib/include/: math.hpp
libs/math-lib/src/: math.cpp
libs/networking/: CMakeLists.txt  Network.json
libs/networking-lib/: CMakeLists.txt
libs/networking-lib/include/: network.hpp
libs/networking-lib/src/: network.cpp
libs/networking/pipeline/: DecoderPipeline.h  EncoderPipeline.h  TcpPipeline.h  UdpPipeline.h
libs/networking/tcp/: TcpClient.h  TcpConnectionManager.h  TcpEncoder.h  TcpFramer.h  TcpHeartbeat.h  TcpServer.h
libs/networking/udp/: UdpMulticastReceiver.h  UdpMulticastSender.h  UdpSocket.h
libs/util-lib/: CMakeLists.txt
libs/util-lib/include/: util.hpp
libs/util-lib/src/: util.cpp
scripts/: build-all.sh  build-clean.sh  build-debug.sh
src/: CMakeLists.txt
src/matching-engine/: CMakeLists.txt  OrderBook.h  OrderBookApi.h  OrderBookEntry.h  OrderBookNode.h  OrderMap.h  OrderPool.h  OrderPoolDefaults.h
src/matching-engine/Common/: CommonEnums.h  MatchResult.h
